# cell-cure-hub

./: .gitignore  README.md  function.md  middleware.ts  package-lock.json  package.json  schema.sql  tailwind.config.ts  walkthrough.md
scratch/: parse_svg.cjs  parse_svg.js
server/: another_frame.py  logo_bg_remove.py  logo_coor.py  pyproject.toml  remover.py  rename_frames.py
src/app/: globals.css  layout.tsx  old.css  page.tsx  robots.ts  sitemap.ts
src/app/(admin)/: layout.tsx
src/app/(shop-admin)/: layout.tsx
src/app/(technician)/: layout.tsx
src/app/admin/: page.tsx
src/app/book/: page.tsx
src/app/coming-soon/: page.tsx
src/app/dashbaord/: page.tsx
src/app/delivery/: page.tsx
src/app/early-bird/: page.tsx
src/app/entry/: page.tsx
src/app/home/: page.tsx
src/app/login/: page.tsx
src/app/signup/: page.tsx
src/app/technician/: page.tsx
src/app/track/: page.tsx
src/components/: EarlyBirdPromo.tsx  EarlyBirdSection.tsx  FooterSection.tsx  InstagramSection.tsx  IphoneScroll.tsx  NagpurMapSection.tsx  ServiceCard.tsx  StorySection.tsx  TopBanner.tsx  WhatsAppFloat.tsx  device-selector.tsx  footer.tsx  navbar.tsx  rca-modal.tsx  repair-tracker.tsx  role-guard.tsx  scrolly-iphone.tsx  vertical-timeline.tsx
src/components/floating-chatbot/: floatchat.tsx
src/components/ui/: calendar.tsx  chart.tsx  resizable.tsx
src/lib/: auth-context.tsx  types.ts  use-shop-id.ts
src/supabase/migrations/: 20260510063517_001_initial_schema.sql  20260510071106_002_fix_rls_policies.sql  20260519_rls_policies_v3.sql  EarlyAcess.sql
(+32 files in other folders)
