[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "google-genai>=2.0.1",
    "langchain>=1.2.18",
    "langchain-classic>=1.0.7",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.3",
    "langchain-groq>=1.1.2",
    "ngrok>=1.7.0",
    "opencv-python>=4.13.0.92",
    "pydantic>=2.13.4",
    "twilio>=9.10.9",
    "uvicorn>=0.46.0",
]
